--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
         <div class="inputs">
           <div class="inputToken">
             <label for="token5">Enter Tokens(5):</label>
-            <input type="number" id="token5" min="0" value="0" />
+            <input type="number" id="token5" min="0" max="5" value="0" />
           </div>
           <div class="inputToken">
             <label for="token10">Enter Tokens(10):</label>
-            <input type="number" id="token10" min="0" value = "0" />
+            <input type="number" id="token10" min="0" max="3" value = "0" />
           </div>
           <!-- <p>Amount:<span id="remAmt">0</span> </p> -->
           <div>
